# aether

./: CONTRIBUTING.md  README.md  requirements.txt  setup.py
configs/: planner.yaml  safety.yaml  scenario_minimal.yaml  sensors.yaml
docs/: algorithms.md  architecture.md  evaluation.md  experiments.md
experiments/grid_baseline/: notes.txt
ros2_ws/src/aether_bringup/: package.xml
ros2_ws/src/aether_msgs/: package.xml
ros2_ws/src/aether_msgs/msg/: GridScores.txt
scripts/: run_grid_demo.py
simulations/scenarios/: indoor_warehouse.yaml  urban_block.yaml
src/aether/: __init__.py
src/aether/analysis/: scores.py
src/aether/evaluation/: path_metrics.py
src/aether/mapping/: voxel_grid.py
src/aether/planners/: grid_search.py
src/aether/simulation/: boxes.py  scenario.py
src/aether/validation/: path_validator.py
tests/: test_boxes.py  test_grid_search.py  test_path_validator.py  test_scenario_loader.py  test_scores.py  test_voxel_grid.py
visualizations/dashboard/: README.md  app.py
