<?xml version="1.0"?>
<package format="3">
  <name>aether_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration placeholders for AETHER simulation studies.</description>
  <maintainer email="maintainer@example.com">PanagiotaGr</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
</package>
