<?xml version="1.0"?>
<package format="3">
  <name>aether_msgs</name>
  <version>0.1.0</version>
  <description>Message placeholders for AETHER simulation studies.</description>
  <maintainer email="maintainer@example.com">PanagiotaGr</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
